Rewrite/refactoring of nearly all processing steps, added documentation, added missing type safety checks, added an index-viewer tool to check the contents of the CachedIndexDataProvider, removed unused classes